--- a/Travel_AI.ipynb
+++ b/Travel_AI.ipynb
@@ -334,7 +334,7 @@
         "import openai\n",
         "import gradio\n",
         "\n",
-        "openai.api_key = \"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\"\n",
+        "openai.api_key = \"API KEY\"\n",
         "\n",
         "messages = [{\"role\": \"system\", \"content\": \"Assistente especialista em criar roteiros de viagens.\"}]\n",
         "\n",
